spacing issues

--- a/demo-components/dropdown.css
+++ b/demo-components/dropdown.css
@@ -5,6 +5,13 @@ html {
 body {
   background-color: lightgray;
   color: #333;
+  padding: 0;
+  margin: 0;
+}
+
+main {
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 ul {
